Fixed wrong alignment of caption

--- a/src/modules/image_figure/image_figure.scss
+++ b/src/modules/image_figure/image_figure.scss
@@ -23,12 +23,13 @@ $smallImageWidths: (
   @include sizeCurve(margin-bottom, medium);
 
   &__img-wrapper {
-    margin-bottom: pxToRem($sizeTiny);
     line-height: 0;
     max-height: 100%;
 
     @at-root button#{&} {
       @include blankButton;
+
+      line-height: 0;
     }
   }
 
@@ -43,6 +44,8 @@ $smallImageWidths: (
   &__caption {
     display: flex;
     align-items: flex-start;
+    padding-top: pxToRem($sizeTiny);
+
 
     .atm-figcaption {
       flex-grow: 1;
